// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyLogo renders a currency logo with network logo 1`] = `
<View
  pointerEvents="auto"
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "height": 40,
      "justifyContent": "center",
      "position": "relative",
      "width": 40,
    }
  }
  testID="token-logo"
>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderBottomLeftRadius": 20,
        "borderBottomRightRadius": 20,
        "borderTopLeftRadius": 20,
        "borderTopRightRadius": 20,
        "flexDirection": "column",
        "height": "96%",
        "left": "2%",
        "opacity": 1,
        "position": "absolute",
        "top": "2%",
        "width": "96%",
        "zIndex": 0,
      }
    }
  />
  <View
    style={
      {
        "flexDirection": "column",
      }
    }
    testID="img-token-image"
  >
    <img
      height={40}
      onError={[Function]}
      onLoad={[Function]}
      src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
      style={
        {
          "aspectRatio": undefined,
          "borderRadius": 20,
          "objectFit": "contain",
          "zIndex": 1,
        }
      }
      width={40}
    />
  </View>
  <View
    style={
      {
        "bottom": -2,
        "flexDirection": "column",
        "position": "absolute",
        "right": -3,
        "zIndex": 10,
      }
    }
  >
    <View
      style={
        {
          "borderColor": "#131313",
          "borderRadius": 6,
          "borderStyle": "solid",
          "borderWidth": 2,
          "flexDirection": "column",
          "height": 20,
          "overflow": "hidden",
          "width": 20,
          "zIndex": 10,
        }
      }
      testID="network-logo"
    >
      <Image
        resizeMode="contain"
        source="mock-asset-ARBITRUM_LOGO.png"
        style={
          {
            "height": 16,
            "width": 16,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`CurrencyLogo renders without error 1`] = `
<View
  pointerEvents="auto"
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "height": 40,
      "justifyContent": "center",
      "position": "relative",
      "width": 40,
    }
  }
  testID="token-logo"
>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderBottomLeftRadius": 20,
        "borderBottomRightRadius": 20,
        "borderTopLeftRadius": 20,
        "borderTopRightRadius": 20,
        "flexDirection": "column",
        "height": "96%",
        "left": "2%",
        "opacity": 1,
        "position": "absolute",
        "top": "2%",
        "width": "96%",
        "zIndex": 0,
      }
    }
  />
  <View
    style={
      {
        "flexDirection": "column",
      }
    }
    testID="img-token-image"
  >
    <img
      height={40}
      onError={[Function]}
      onLoad={[Function]}
      src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984/logo.png"
      style={
        {
          "aspectRatio": undefined,
          "borderRadius": 20,
          "objectFit": "contain",
          "zIndex": 1,
        }
      }
      width={40}
    />
  </View>
</View>
`;
